# cagliostr

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  cagliostr.h  cagliostr.hxx  compile_flags.txt  main.cxx  postgresql.cxx  records.cxx  sign.cxx  sqlite3.cxx  test.cxx  version.h  ws28-fix.patch
.github/workflows/: build.yaml  cmake-single-platform.yml  docker.yaml
